--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,10 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    befor
-    <br>
+    <%- include('../partials/header.ejs')%>
+    <%- include('../partials/errorMessage.ejs') %> 
     <%- body  %> 
-    <br>
-    after
 </body>
 </html>
