--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,4 @@
-hello this file name is index.ejs 
+<h1>Recently Added To Store</h1>
+<% books.forEach(book =>{ %>
+    <img src="<%= book.CoverImagePath %>" alt="img" width="100" height="150">
+<% })%>
