--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -8,4 +8,8 @@
 <br>
 <% authors.forEach(author =>{ %>
     <div><%= author.name%></div>
+    <a href="/authors/<%= author.id %>">view</a>
+    <a href="/authors/<%= author.id %>/edit">edit</a>
+    <%- include("../partials/delete_form" ,{ url : `/authors/${author.id}`})%>
 <% })%>
+
