--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -6,11 +6,11 @@
     </div>
     <div>
         <label>Publish After</label>
-        <input type="data" name="publishedAfter" value="<%= searchOptions.publishedAfter %>">
+        <input type="date" name="publishedAfter" value="<%= searchOptions.publishedAfter %>">
     </div>
     <div>
         <label>Publish before</label>
-        <input type="data" name="publishedBefore" value="<%= searchOptions.publishedBefore %>">
+        <input type="date" name="publishedBefore" value="<%= searchOptions.publishedBefore %>">
     </div>
     <button type="submit">Search</button>
 </form>
