--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -6,6 +6,6 @@
 <% if(bookByAuthor.length> 0) { %>
     <h2>Books by Author</h2>
     <% bookByAuthor.forEach( book=>{ %>
-        <img src="<%= book.CoverImagePath %>" alt="img" width="100" height="150">
+        <a href="/books/<%= book.id %>" ><img src="<%= book.CoverImagePath %>" alt="img" width="100" height="150"></a>
     <% }) %>
 <% } %>
