--- a/views/books/form_field.ejs
+++ b/views/books/form_field.ejs
@@ -7,9 +7,9 @@
     <label>Author</label>
     <select name="author">
         <% authors.forEach(author=> { %>
-            <% if( author.id===book.author) { %>
+            <% if(author.id == book.author) { %>
                 <option selected label="<%= author.name %>" value="<%= author.id %>">
-                    <% } else { %>
+            <% } else { %>
                 <option label="<%= author.name %>" value="<%= author.id %>">
             <% } %>
         <% }) %>
