--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -17,5 +17,5 @@
 
 <br>
 <% books.forEach(book =>{ %>
-    <img src="<%= book.CoverImagePath %>" alt="img" width="100" height="150">
+    <a href="/books/<%= book.id %>" ><img src="<%= book.CoverImagePath %>" alt="img" width="100" height="150"></a>
 <% })%>
